--- a/restaurant_group/public/index.html
+++ b/restaurant_group/public/index.html
@@ -2,11 +2,23 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<link rel="stylesheet" type="text/css" href="/bower_components/semantic-ui/dist/semantic.css">
+  <link rel="stylesheet" type="text/css" href="/bower_components/semantic-ui/dist/semantic.css">
 	<link href='http://fonts.googleapis.com/css?family=Italianno' rel='stylesheet' type='text/css'>
 <style>
 
-h1 {color: #ffffff ; font-family: 'Italianno', cursive; font-weight: 400; font-size: 500%}
+img {
+	width: 50%;
+	height: 50%
+}
+
+
+h1 {
+	padding: 30px;
+	margin: 30px;
+	color: #ffffff;
+	font-family: 'Italianno', cursive;
+	font-weight: 400; font-size: 500%
+}
 
 /*h1 {text-shadow: horizontal-offset vertical-offset blur color;
 text-shadow: 2px 4px 3px rgba(0,0,0,0.3);}*/
@@ -28,7 +40,7 @@ h1 { text-shadow: 0px 4px 3px rgba(0,0,0,0.4),
 }
 </style>
 	
-	<title>Lamplugh: Restaurant</title>
+	<title>Lamplugh Restaurants</title>
 	
 </head>
 <body>
@@ -37,7 +49,7 @@ h1 { text-shadow: 0px 4px 3px rgba(0,0,0,0.4),
 
 
 
-<!-- <script type="text/template" data-id="template"> -->
+
 <!-- your code goes below -->
 
 <!-- Able to create, read, update, and delete RESTAURANTS. -->
@@ -45,60 +57,124 @@ h1 { text-shadow: 0px 4px 3px rgba(0,0,0,0.4),
 
 <div class="center aligned ui grid">
 	<div class="ui two column centered grid">
-	<div class="logo">
-	<h1>Lamplugh Restaurant</h1>
-	</div>
-		<div class="three wide column">
-			<div class="ui segment">
-				<img class="ui medium rounded image" img src="./images/cuban_01.jpg" height="500px" width="500px">
-			</div>
+		<div class="logo">
+			<h1>Lamplugh Restaurants</h1>
 		</div>
 
-		<div class="nine wide column">
-			<table class="ui striped inverted red table">
+
+				<div class="three wide column">
+					<div class="ui segment">
+						<img class="ui medium rounded image" img src="./images/cuban_01.jpg">
+					</div>
+				</div>
+
+
+				<div class="twelve wide column"> <!-- template begin -->
+					<table class="ui striped inverted red table">
+
 				<thead>
 					<tr>
-						<th>Name</th>
+						<th>Name</th> <!-- Use Mustache to change the title names to relate to the title names for the items table --> 
 						<th>Location</th>
 						<th>Cuisine</th>
 						<th>Image</th>
+						<th>Save</th>
+						<th>Delete</th>
+						<th>View</th>
 					</tr>
 				</thead>
-				<tbody>
-					<tr>
+
+					<tbody>
+
+					</tbody>
+				</table>
+
+				<div>
+					<td>
+						<a class="ui red button">Add Restuarant</a>
+					</td>
+				</div>
+
+
+		</div> <!-- template end -->
+	</div>
+</div>
+					<!-- <tr>
 						<td>Cubana</td>
-						<td>48 Lower Marsh London SE1 7RG United Kingdom Southwark, Waterloo</td>
+						<td>48 Lower Marsh London, United Kingdom Southwark, Waterloo</td>
 						<td>Latin American</td>
-						<td>1</td>
+						<td>image</td>
+						<td><div class="ui button">Menu</div></td>
+						<td><div class="ui button">Delete</div></td>
 					</tr>
 					<tr>
 						<td>Da Andrea Andriello</td>
 						<td>35 W 13th St, New York, NY 10011</td>
 						<td>Italiano</td>
-						<td>2</td>
+						<td>image</td>
+						<td><div class="ui button">Menu</div></td>
+						<td><div class="ui button">Delete</div></td>
 					</tr>
 					<tr>
 						<td>Tonminaka-to-Tomihara Tonkastsu</td>
-						<td>714-2 Tainoshocho, Tenri, Nara Prefecture 632-0071, Japan</td>
+						<td>Tainoshocho, Tenri, Nara Prefecture, Japan</td>
 						<td>Nihonryori</td>
-						<td>3</td>
+						<td>image</td>
+						<td><div class="ui button">Menu</div></td>
+						<td><div class="ui button">Delete</div></td>
+					</tr> -->
+
+					<script type="text/template" data-id="template">
+
+					<tr data-id='{{id}}'>
+						<td data-attr='name' contenteditable='true'>{{name}}</td>
+						<td data-attr='location' contenteditable='true'>{{location}}</td>
+						<td data-attr='cuisine' contenteditable='true'>{{cuisine}}</td>
+
+						<td data-attr='image_url' contenteditable='true'>
+							<div class="ui segment"><img src="{{image_url}}"></div>
+						</td>
+
+						<td><div data-action='save' class="ui button">Save</div></td>
+						<td><div data-action='delete' class="ui button">Delete</div></td>
+						<td><div data-action='view' class="ui button">View</div></td>
 					</tr>
-				</tbody>
-			</table>
 
-			<td>
-				<div class="ui red button">Add</div>
-			</td>
-			<td>
-				<div class="ui red button">Edit</div>
-			</td>
-			<td>
-				<div class="ui red button">Delete</div>
-			</td>
+					</script>
 
-		</div>
-	</div>
-</div>
+
+					<script type="text/template" data-id="thead">
+					<tr>
+						<th>Name</th> <!-- Use Mustache to change the title names to relate to the title names for the items table --> 
+						<th>Price</th>
+						<th>Cuisine</th>
+						<th>Order Count</th>
+						<th>Save</th>
+						<th>Delete</th>
+						<th>Cancel</th>
+					</tr>
+					</script>
+
+
+					<script type="text/template" data-id="template2">
+
+					<tr data-id='{{restaurant_id}}'>
+						<td data-attr='name' contenteditable='true'>{{name}}</td>
+						<td data-attr='price' contenteditable='true'>{{price}}</td>
+						<td data-attr='order_count' contenteditable='order_count'>{{order_count}}</td>
+						
+						<td data-attr='image_url' contenteditable='true'>
+							<div class="ui segment"><img src="{{image_url}}"></div>
+						</td>
+
+						<td><div data-action='save' class="ui button">Save</div></td>
+						<td><div data-action='delete' class="ui button">Delete</div></td>
+						<td><div data-action='cancel' class="ui button">Cancel</div></td>
+					</tr>
+
+					</script>
+
+
 
 <!-- </div> -->
 
@@ -108,7 +184,7 @@ h1 { text-shadow: 0px 4px 3px rgba(0,0,0,0.4),
 
 
 <!-- your code goes above -->
-<!-- </script> -->
+
 
 
 
