--- a/restaurant_group/public/index.html
+++ b/restaurant_group/public/index.html
@@ -191,7 +191,7 @@ h1 { text-shadow: 0px 4px 3px rgba(0,0,0,0.4),
 
 						<div> <!-- TEMPLATE IN -->
 							<td>
-								<a class="ui red button">Add Restuarant</a>
+								<a class="ui red button">Add Items</a>
 							</td>
 						</div>
 
